src/test/ui/privacy/associated-item-privacy-inherent.stderr
error: type `for<'r> fn(&'r priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:13:21
   |
LL |         let value = Pub::method;
   |                     ^^^^^^^^^^^ private type
...
LL |     priv_nominal::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_nominal::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `for<'r> fn(&'r priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:15:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_nominal::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_nominal::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `for<'r> fn(&'r priv_nominal::Pub) {priv_nominal::Pub::method}` is private
  --> $DIR/associated-item-privacy-inherent.rs:17:13
   |
LL |         Pub.method();
   |             ^^^^^^ private type
...
LL |     priv_nominal::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_nominal::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: associated constant `CONST` is private
  --> $DIR/associated-item-privacy-inherent.rs:19:9
   |
LL |         Pub::CONST;
   |         ^^^^^^^^^^ private associated constant
...
LL |     priv_nominal::mac!();
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_nominal::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:37:21
   |
LL |         let value = Pub::method;
   |                     ^^^^^^^^^^^ private type
...
LL |     priv_signature::mac!();
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_signature::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:39:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_signature::mac!();
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_signature::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:41:13
   |
LL |         Pub.method(loop {});
   |             ^^^^^^ private type
...
LL |     priv_signature::mac!();
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_signature::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:57:21
   |
LL |         let value = Pub::method::<Priv>;
   |                     ^^^^^^^^^^^^^^^^^^^ private type
...
LL |     priv_substs::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:59:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_substs::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:61:9
   |
LL |         Pub.method::<Priv>();
   |         ^^^^^^^^^^^^^^^^^^^^ private type
...
LL |     priv_substs::mac!();
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:80:21
   |
LL |         let value = <Pub>::method;
   |                     ^^^^^^^^^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:82:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:84:21
   |
LL |         let value = Pub::method;
   |                     ^^^^^^^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:86:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:88:21
   |
LL |         let value = <Pub>::static_method;
   |                     ^^^^^^^^^^^^^^^^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:90:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:92:21
   |
LL |         let value = Pub::static_method;
   |                     ^^^^^^^^^^^^^^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:94:9
   |
LL |         value;
   |         ^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:96:19
   |
LL |         Pub(Priv).method();
   |                   ^^^^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:99:10
   |
LL |         <Pub>::CONST;
   |          ^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-inherent.rs:101:9
   |
LL |         Pub::CONST;
   |         ^^^ private type
...
LL |     priv_parent_substs::mac!();
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `priv_parent_substs::mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 21 previous errors

